--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 		 <mete charset="utf-8">
    </head>
       <body>
-	         <h1>esse e meu site</h1>
+	         <h1><p><oblique><u>esse e meu site no github</u></obliquea></p></h1>
+			 <hr>
+			 <h2>esta é minha pagina</h2>
+			 
 	  </body>
 </html>
