--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!doctype.html>
 <html>
    <head>
          <title>meu</title>
@@ -7,6 +8,7 @@
 	         <h1><p><oblique><u>esse e meu site no github</u></obliquea></p></h1>
 			 <hr>
 			 <h2>esta é minha pagina</h2>
+			 
 			 
 	  </body>
 </html>
