--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	         <h1><p><oblique><u>esse e meu site no github</u></obliquea></p></h1>
 			 <hr>
 			 <h2>esta é minha pagina</h2>
-			 
+			 <img src="img/images.jpg" alt="caça">
 			 
 	  </body>
 </html>
