--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 		 <mete charset="utf-8">
    </head>
       <body>
-	         <h1><p><oblique><u>esse e meu site no github</u></obliquea></p></h1>
+	         <h1><p><oblique><u>esse e meu site no github</u></oblique></p></h1>
 			 <hr>
 			 <h2>esta é minha pagina</h2>
-			 <img src="img/images.jpg" alt="caça">
+			 <img src="img/images.jpg" alt="caça"><br>
+			 
+		     <a href="outro.html">outro html</a>
 			 
 	  </body>
 </html>
